--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
   "homepage": "https://jbond47.github.io",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "craco-plugin-scoped-css": "^1.1.1",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "3.4.3",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
     "react-switch": "^5.0.1",
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -45,7 +48,10 @@
   "devDependencies": {
     "@iconify/icons-logos": "^1.0.12",
     "@iconify/react": "^1.1.3",
+    "autoprefixer": "^9.8.8",
     "gh-pages": "^3.1.0",
-    "sass": "^1.42.1"
+    "postcss": "^7.0.39",
+    "sass": "^1.42.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
